--- a/login.html
+++ b/login.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ورود به یادآور چک</title>
+<!-- تنظیمات PWA و آیفون -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="یادآور چک">
+    <link rel="apple-touch-icon" href="icon-192.png">
+    <meta name="theme-color" content="#00bcd4">
+
+    <!-- ثبت سرویس ورکر -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js')
+                .then(() => console.log('Service Worker Registered'));
+        }
+    </script>
     <link rel="stylesheet" href="style.css">
     <style>
         body { 
