--- a/check-list.html
+++ b/check-list.html
@@ -42,20 +42,17 @@
         <div class="side-menu-item" onclick="openCounterpartyListMode()"><i class="fa-solid fa-address-book"></i> طرف حساب‌ها</div>
         <div class="side-menu-item" onclick="document.getElementById('excelFileInput').click()"><i class="fa-solid fa-file-import"></i> ورود اکسل</div>
         <div class="side-menu-item" onclick="exportToExcel()"><i class="fa-solid fa-file-export"></i> خروجی اکسل</div>
+        <div class="side-menu-item" onclick="backupToGoogle()"><i class="fa-solid fa-cloud-arrow-up"></i> بکاپ ابری</div>
+        <div class="side-menu-item" onclick="restoreFromGoogle()"><i class="fa-solid fa-cloud-arrow-down"></i> بازیابی ابری</div>
         <input type="file" id="excelFileInput" accept=".xlsx, .xls" style="display:none" onchange="processExcelFile(this)">
     </div>
 
-    <!-- Filter Modal (Fixed Buttons) -->
     <div id="filterModal" class="modal-overlay" style="align-items:flex-end">
         <div class="filter-modal-content">
-            <div style="padding:15px;background:#f9f9f9;display:flex;justify-content:space-between">
-                <b>فیلتر پیشرفته</b>
-                <span style="color:red;cursor:pointer" onclick="resetAdvancedFilter()">لغو فیلتر</span>
-            </div>
+            <div style="padding:15px;background:#f9f9f9;display:flex;justify-content:space-between"><b>فیلتر پیشرفته</b><span style="color:red;cursor:pointer" onclick="resetAdvancedFilter()">لغو فیلتر</span></div>
             <div class="filter-section"><span class="filter-title">نوع چک</span><div style="display:flex;gap:20px"><label><input type="checkbox" id="chkPay" checked> پرداختی</label><label><input type="checkbox" id="chkRec" checked> دریافتی</label></div></div>
             <div class="filter-section"><span class="filter-title">مبلغ (ریال)</span><div class="range-inputs"><input id="filterMinAmount" placeholder="از"><input id="filterMaxAmount" placeholder="تا"></div></div>
             <div class="filter-section"><span class="filter-title">سررسید</span><div class="range-inputs"><input id="filterStartDueDate" class="date-input-trigger" readonly placeholder="از" onclick="openCustomCalendar(this.id)"><input id="filterEndDueDate" class="date-input-trigger" readonly placeholder="تا" onclick="openCustomCalendar(this.id)"></div></div>
-            <div class="filter-section"><span class="filter-title">صدور</span><div class="range-inputs"><input id="filterStartIssueDate" class="date-input-trigger" readonly placeholder="از" onclick="openCustomCalendar(this.id)"><input id="filterEndIssueDate" class="date-input-trigger" readonly placeholder="تا" onclick="openCustomCalendar(this.id)"></div></div>
             <div class="filter-section"><span class="filter-title">بانک</span><input id="filterBankDisplay" class="clean-input" readonly placeholder="انتخاب کنید" onclick="openBankModal()"><input type="hidden" id="filterBankValue"></div>
             <div class="filter-section"><span class="filter-title">طرف حساب</span><input id="filterPayTo" class="clean-input" style="width:100%;border:1px solid #ddd;padding:5px"></div>
             <div class="filter-section"><span class="filter-title">رنگ</span><div class="color-toggle-container">
@@ -90,6 +87,8 @@
     
     <div id="addCounterpartyModal" class="modal-overlay" style="z-index:5500"><div class="modal-content"><div class="modal-header">طرف حساب جدید</div><div class="modal-body cp-add-form"><input id="newCpName" class="cp-input" placeholder="نام و نام خانوادگی"><input id="newCpNationalId" class="cp-input" placeholder="کد / شناسه ملی" inputmode="numeric"><input id="newCpPhone" class="cp-input" placeholder="شماره تماس" inputmode="numeric"></div><div class="modal-footer" style="display:flex;gap:10px"><button class="close-modal-btn" style="flex:1" onclick="document.getElementById('addCounterpartyModal').style.display='none'">انصراف</button><button class="action-btn-full" style="flex:1" onclick="saveNewCounterparty()">ذخیره</button></div></div></div>
     
+    <div id="backupListModal" class="modal-overlay"><div class="modal-content"><div class="modal-header">انتخاب بکاپ</div><div id="backupListContainer" class="modal-body" style="max-height:60vh;overflow:auto;padding:10px"></div><div class="modal-footer"><button class="action-btn-full" onclick="document.getElementById('backupListModal').style.display='none'">بستن</button></div></div></div>
+
     <nav class="bottom-navigation">
         <div class="nav-item" onclick="openSideMenu()"><i class="fa-solid fa-ellipsis"></i><span>بیشتر</span></div>
         <a href="index.html" class="nav-item"><i class="fa-solid fa-bars-staggered"></i><span>داشبورد</span></a>
